# edu-rust-gigachat-app-frontend

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  agents-issue-workflow.cncf.yaml  agents-issue-workflow.json  agents-issue-workflow.yaml  index.html  styles.css
.beads/: issues.jsonl
docs/: api_contract.md  build_and_run.md  common_issues.md  framework_selection.md  git_ssh_github.md  issue_workflow.cncf.yaml  stack_guide.md  ui_ux_requirements.md  yew_ui_guide.md
lab/: README.md  beads_guide.md  git_github_setup.md  git_version_control.md  group_work_guide.md  lab_02_web_interface_introduction.md  lab_work.md  library_reference.md
lab-cloud/: lab_yc_serverless_application.md  practice_yc_serverless_application.md
lab_materials/: README.md  beads_guide.md  git_version_control.md  lab_02_web_interface_introduction.md  lab_work.md  library_reference.md
lab_materials/lab_2/: README.md  lab_work.md  library_reference.md  resources_collection.md
practice-cloud/: practice_yc_serverless_application.md
src/: app.rs  config.rs  lib.rs  main.rs
src/application/: mod.rs  ports.rs  usecases.rs
src/domain/: entities.rs  errors.rs  mod.rs  value_objects.rs
src/infrastructure/: api_client.rs  mod.rs
